using System;
using System.Collections.Generic;
using System.Text;
using System.Threading.Tasks;
internal class AnimationStrings
{
    internal static string Ismoving = "Ismoving";
    internal static string Grounded = "IsGrounded";
    internal static string Attack = "Attack";
    internal static string AirAttackTrigger = "AirAttackTrigger";
    internal static string BoolAirAttack = "BoolAirAttack";
    internal static string AirAttack = "AirAttack";
    internal static string wallSlide = "wallSlide";
    internal static string ClimbLedge = "ClimbLedge";
    internal static string TriggerClimb = "Climb";
    internal static string attackCount = "attackCount";
    internal static string Attacking = "Attacking";
    internal static string RunChargeAttack = "RunChargeAttack";
    internal static string DelayAfterAnattack = "DelayAfterAnattack";
    internal static string canClimbLedge = "canClimbLedge";
    internal static string Random = "Random";
    internal static string Hold = "Hold";
    internal static string Parry = "Parry";
    internal static string ParryTrigger = "ParryTrigger";
    internal static string StrongAttack = "StrongAttack";
    internal static string Jump = "Jump";
    internal static string Dash = "Dash";
    internal static string Crouch = "Crouch";
    internal static string Dashing = "Dashing";
    internal static string Stronghold = "StrongHold";
    internal static string isOnWall = "IsOnWall";
    internal static string isOnCelling = "IsOnCeilling";
    internal static string canMove = "canMove";
    internal static string canFlip = "canFlip";
    internal static string Turnable = "Turnable";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string hit = "hit";
    internal static string StaggerHit = "StaggerHit";
    internal static string AttackState = "AttackState";
    internal static string Move = "Move";



}
